IE9 support, unminified CSS, fixed a minor sizing issue

--- a/example/index.html
+++ b/example/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+"http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
     <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
